<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/et_user"
        android:hint="@string/text_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/et_age"
        android:hint="@string/text_age"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/et_desc"
        android:hint="@string/text_desc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:lines="2"/>
    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_boy"
            android:text="@string/text_boy"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_girl"
            android:text="@string/text_girl_f"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"/>
    </RadioGroup>
    <EditText
        android:id="@+id/et_pass"
        android:hint="@string/et_pass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/text_password_again"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_email"
        android:hint="@string/text_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"/>
    <TextView
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register_remind"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btnRegistered"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/text_registered"
        android:textColor="@android:color/white"/>
</LinearLayout>