<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">
    <TextView
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_password"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/et_now"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_now_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_new"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_new_password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_new_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_password_again"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/text_editor_password"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_editor_password"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_email"/>
    <Button
        android:id="@+id/btn_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/text_forget_password"
        android:textColor="@android:color/white"/>

</LinearLayout>