<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg">
    <!--语音播报-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="15dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_1"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_1"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>
        </LinearLayout>
        <Switch
            android:id="@+id/sw_speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <!--短信提醒-->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="15dp">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_title_2"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_setting_content_2"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>
        </LinearLayout>
        <Switch
            android:id="@+id/sw_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <!--检查新版本-->
    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_version"
            android:text="@string/text_setting_title_3"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/text_setting_content_3"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--扫一扫-->
    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_setting_title_4"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:id="@+id/tv_scan_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_setting_content_4"
            android:textSize="14sp" />
    </LinearLayout>
    <!--我的二维码-->
    <LinearLayout
        android:id="@+id/ll_qr_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_setting_title_5"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:textColor="@color/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_setting_content_5"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>