<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_name"
        android:text="sf"
        android:hint="@string/Courier_company"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/et_number"
        android:text="1186465887499"
        android:hint="@string/Courier_number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <Button
        android:id="@+id/btn_get_courier"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_bg"
        android:text="@string/Inquire"
        android:textColor="@android:color/white"/>
    <ListView
        android:scrollbars="none"
        android:id="@+id/mListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
</LinearLayout>