<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="bottom"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/take_photo"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/photo"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>